--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,13 @@ targetCompatibility = '11'
 
 mainClassName = 'WebsiteMonitor' // adjust if your main class is in a package
 
+jar {
+    manifest {
+        attributes 'Main-Class': WebsiteMonitor
+    }
+}
+
+
 repositories {
     mavenCentral()
 }
